refc: modify pagination template, move route api dir
