# docs/swagger.json
@@ -22,7 +22,8 @@
                         "type": "integer",
                         "example": 10,
                         "name": "limit",
-                        "in": "query"
+                        "in": "query",
+                        "required": true
                     },
                     {
                         "type": "integer",
@@ -341,9 +342,12 @@
         "dto.PaginationResponseDtoExample": {
             "type": "object",
             "properties": {
+                "is_has_next_page": {
+                    "type": "boolean",
+                    "example": true
+                },
                 "limit": {
-                    "type": "integer",
-                    "example": 10
+                    "type": "integer"
                 },
                 "list": {
                     "type": "array",
@@ -352,6 +356,9 @@
                 "total_entry": {
                     "type": "integer",
                     "example": 100
+                },
+                "total_page": {
+                    "type": "number"
                 }
             }
         },
