# internal/dto/pagination.res.go
@@ -1,13 +1,17 @@
 package dto
 
 type PaginationResponseDto[T any] struct {
-	List       []T `json:"list"`
-	Limit      int `json:"limit"`
-	TotalEntry int `json:"total_entry"`
+	List          []T     `json:"list"`
+	TotalEntry    int64   `json:"total_entry"`
+	Limit         int64   `json:"limit"`
+	TotalPage     float64 `json:"total_page"`
+	IsHasNextPage bool    `json:"is_has_next_page"`
 }
 
 type PaginationResponseDtoExample struct {
-	List       []any `json:"list"`
-	TotalEntry int   `json:"total_entry" example:"100"`
-	Limit      int   `json:"limit" example:"10"`
+	List          []any   `json:"list"`
+	Limit         int64   `json:"limit"`
+	TotalEntry    int64   `json:"total_entry" example:"100"`
+	TotalPage     float64 `json:"total_page"`
+	IsHasNextPage bool    `json:"is_has_next_page" example:"true"`
 }
